--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="wallet_to_bank">Wallet To Bank</string>
     <string name="enter_mobile_no_or_email">Enter Mobile No. Or Email</string>
     <string name="misc">Misc.</string>
+    <string name="there_are_many_variations">There are many variations</string>
+    <string name="dummy_cancel_amount">\u00241500</string>
+    <string name="dummy_actual_amount">\u00241700</string>
+    <string name="dummy_text">An Order ID in this unique number associated with every our secure checkout</string>
+    <string name="buy_now">BUY NOW</string>
+    <string name="add_to_cart">ADD TO CART</string>
+    <string name="product_list">Product List</string>
 </resources>
