--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="buy_now">BUY NOW</string>
     <string name="add_to_cart">ADD TO CART</string>
     <string name="product_list">Product List</string>
+    <string name="login">Login</string>
+    <string name="my_order">My Order</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="or">or</string>
 </resources>
