--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="my_order">My Order</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="or">or</string>
+    <string name="notification">Notification</string>
+    <string name="about_us">About Us</string>
 </resources>
