login my oder wallet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="contact_us">Contact Us</string>
     <string name="faq">FAQ</string>
     <string name="privacy_policy">Privacy Policy</string>
+    <string name="user_type">User Type</string>
 </resources>
