--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,16 @@
     <string name="faq">FAQ</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="user_type">User Type</string>
+
+    <string name="not_connected_internet">Not connected to Internet</string>
+    <string name="logout">Logout</string>
+    <string name="my_profile">My Profile\'</string>
+    <string name="wallet_statement">Wallet Statement</string>
+    <string name="my_orders">My Orders</string>
+    <string name="change_payment_option">Change Payment Option</string>
+    <string name="settings">Settings</string>
+    <string name="more">More</string>
+    <string name="home">Home</string>
+
+
 </resources>
