--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="settings">Settings</string>
     <string name="more">More</string>
     <string name="home">Home</string>
+    <string name="rewards">Rewards</string>
 
 
 </resources>
