--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
 
     <string name="not_connected_internet">Not connected to Internet</string>
     <string name="logout">Logout</string>
-    <string name="my_profile">My Profile\'</string>
+    <string name="my_profile">My Profile</string>
     <string name="wallet_statement">Wallet Statement</string>
     <string name="my_orders">My Orders</string>
     <string name="change_payment_option">Change Payment Option</string>
