--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="more">More</string>
     <string name="home">Home</string>
     <string name="rewards">Rewards</string>
+    <string name="name">Name</string>
 
 
 </resources>
