--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="home">Home</string>
     <string name="rewards">Rewards</string>
     <string name="name">Name</string>
+    <string name="splash">Splash</string>
 
 
 </resources>
